# kokkos-tools-examples

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/instances/: CMakeLists.txt
examples/instances/begin/: CMakeLists.txt  begin.cpp
examples/instances/end/: CMakeLists.txt  end.cpp
examples/streams/begin/: CMakeLists.txt  begin.cpp
examples/streams/end/: CMakeLists.txt  end.cpp
examples/tuning/: CMakeLists.txt
examples/tuning-advanced/begin/: CMakeLists.txt  begin.cpp
examples/tuning-advanced/end/: CMakeLists.txt  end.cpp
examples/tuning-mechanics/begin/: CMakeLists.txt  begin.cpp
examples/tuning/begin/: CMakeLists.txt  begin.cpp
examples/uvm/begin/: CMakeLists.txt  uvm_caliper.in
examples/uvm/end/: CMakeLists.txt  end.cpp  run_script
xpress-apex/src/apex/: apex_kokkos_tuning.cpp  profiler_listener.cpp  simulated_annealing.hpp
xpress-apex/src/wrappers/: memory_wrapper_internal.cpp  pthread_wrapper_internal.cpp
