cmake_minimum_required(VERSION 3.16)
project(kokkos_tools_examples)

add_subdirectory(kokkos)
cmake_policy(SET CMP0077 NEW)
set(WITH_KOKKOS ON CACHE BOOL "")
set(BUILD_TESTING OFF)
if(Kokkos_ENABLE_CUDA)
	set(WITH_CUPTI ON CACHE BOOL "")
	set(APEX_WITH_CUDA ON CACHE BOOL "")
endif() # Kokkos_ENABLE_CUDA
set(APEX_WITH_MPI OFF CACHE BOOL "")
set(APEX_WITH_BFD OFF CACHE BOOL "")
set(APEX_WITH_ACTIVEHARMONY OFF CACHE BOOL "")
set(APEX_WITH_OTF2 OFF CACHE BOOL "")
set(APEX_WITH_OMPT OFF CACHE BOOL "")
add_subdirectory(caliper)
add_subdirectory(xpress-apex)
add_subdirectory(examples)
